--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,50 @@
-body {
-    background-image: url(images/co.jpg);
+html {
+    width: 100%;
+    height: 100%;
 }
+
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+hr {
+    max-width: 65px;
+    border-width: 3px;
+    border-color: #F05F44;
+}
+
+header.startup {
+    background-position: center;
+    background-image: url(../images/co.jpg);
+    background-size: cover;
+    height: 100%;
+}
+
+header.startup  hr{
+    margin-top: 200px;
+    margin-bottom: 30px;
+}
+
+.faded {
+    colour: rgba(255,255,255, 0.8)
+}
+
+.btn {
+    font-weight: 700;
+    text-transform: uppercase;
+    border-radius: 300px;
+    font-family: 'Montserrat' ,  sans-serif;
+}
+
+.btn-xl {
+    padding: 1rem 2rem;
+}
+
+.btn-primary {
+    background-color: #F05F44;
+    border-color: #F05F44;
+}
+ .btn-primary:hover {
+     background-color: #ee4b08;
+     border-color: #ee4b08;
+ }
