--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ hr {
 
 header.startup {
     background-position: center;
-    background-image: url(../images/co.jpg);
+    background-image: url(https://github.com/cododev/cododev.github.io/blob/master/images/co.jpg);
     background-size: cover;
     height: 100%;
 }
