--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ hr {
 
 header.startup {
     background-position: center;
-    background-image: url(../images/co.jpg);
+    background-image: url(header.jpg);
     background-size: cover;
     height: 100%;
 }
