--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ hr {
 
 header.startup {
   background-position: center;
-  background-image: url("header.jpg");
+  background-image: url("images/header.jpg");
   background-size: cover;
   height: 100%;
 }
